# fuzzy-telegram

./: .dockerignore  .env.example  .gitignore  agents.md  alembic.ini  fly.backend.toml  fly.frontend.toml  implementation.md  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 20260213_0001_initial_schema.py
backend/: Dockerfile  __init__.py  dependencies.py  main.py
backend/api/: presenters.py
backend/api/routers/: __init__.py  chat.py  contracts.py  export.py
backend/core/: config.py
backend/db/: __init__.py  models.py  session.py
backend/models/: __init__.py  ai_interaction_model.py  clause_model.py  contract_model.py  log_model.py
backend/schemas/: __init__.py  ai_actions.py  contract_schema.py
backend/services/: __init__.py  ai_service.py  contract_service.py  legal_notes_service.py  logging_service.py  rendering_service.py
backend/storage/: in_memory_store.py  sqlalchemy_store.py  store_protocol.py
backend/templates/: contract_en.j2  contract_es.j2
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  main.ts  styles.css
frontend/src/components/: ChangeLogPanel.vue  ChatAssistant.vue  ClauseEditor.vue  ContractFormTabs.vue  LivePreview.vue  VoiceIntake.vue
frontend/src/pages/: ContractEditor.vue  ContractHistory.vue  Dashboard.vue
frontend/src/stores/: chatStore.ts  contractStore.ts
tests/: test_contract_service.py  test_voice_extraction.py
